Name:                EitherT
Version:             0.0.1
Synopsis:            EitherT monad transformer
Description:         Support for computations with informative failures.
License:             BSD3
License-file:        LICENSE
Category:            Control
Author:              Eyal Lotem <eyal.lotem+hackage@gmail.com>
Maintainer:          Eyal Lotem <eyal.lotem+hackage@gmail.com>
Stability:           experimental
Build-Type:          Simple
HS-Source-Dirs:      src
Build-Depends:       base >= 4 && < 5, mtl
Exposed-modules:     Control.Monad.Either
ghc-options:         -Wall 
